[package]
name = "microbit-fun"
version = "0.1.0"
edition = "2018"

[dependencies.microbit-v2]
version = "0.10.1"
git = "https://github.com/nrf-rs/microbit/"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
nb = "1.0.0"
embedded-hal = "0.2.6"
heapless = "0.7.5"